<resources>
    <string name="app_name">My Application</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="dateInput">Pick Date</string>
    <string name="timeInput">Pick Time</string>
    <string name="dateButton">Ok</string>
    <string name="timeButton">Ok</string>
    <string name="title">Title</string>
    <string name="okButton">Ok</string>
    <string name="cancelButton">Cancel</string>
    <string name="TitleTextView">Title</string>
    <string name="descriptionInput">Description</string>
    <string name="descriptionTextView">Description</string>
    <string name="deleteOptionButton">Delete</string>
    <string name="titleInput">Title</string>
    <string name="onDetailsEditButton">Edit</string>
    <string name="menu_nav_settings">Settings</string>
    <string name="menu_nav_edit">Edit Task Lists</string>
    <string name="menu_nav_calendar">Calendar</string>
    <string name="menu_nav_all">All</string>
</resources>
