<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <EditText
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:id="@+id/titleInput"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:hint="@string/titleInput" />

    <EditText
        android:layout_width="250dp"
        android:layout_height="100dp"
        android:inputType="textMultiLine"
        android:ems="10"
        android:id="@+id/descriptionInput"
        android:hint="@string/descriptionInput"
        android:layout_below="@+id/titleInput"
        android:layout_alignLeft="@+id/titleInput"
        android:layout_alignStart="@+id/titleInput"
        android:layout_alignRight="@+id/titleInput"
        android:layout_alignEnd="@+id/titleInput"
        android:layout_marginTop="30dp" />

    <TextView
        android:layout_width="250dp"
        android:layout_height="30dp"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:id="@+id/dateInput"
        android:text="@string/dateInput"
        android:layout_below="@+id/descriptionInput"
        android:layout_alignLeft="@+id/descriptionInput"
        android:layout_alignStart="@+id/descriptionInput"
        android:layout_marginTop="30dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:id="@+id/timeInput"
        android:text="@string/timeInput"
        android:layout_below="@+id/dateInput"
        android:layout_alignLeft="@+id/dateInput"
        android:layout_alignStart="@+id/dateInput"
        android:layout_alignRight="@+id/dateInput"
        android:layout_alignEnd="@+id/dateInput"
        android:layout_marginTop="30dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/okButton"
        android:id="@+id/okButton"
        android:layout_below="@+id/timeInput"
        android:layout_alignStart="@+id/timeInput" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/cancelButton"
        android:id="@+id/cancelButton"
        android:layout_below="@+id/timeInput"
        android:layout_toEndOf="@+id/okButton" />

</RelativeLayout>